--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:18 AS build
 WORKDIR /app
-COPY ./frontend/package*.json ./
+COPY ./package*.json ./
 RUN npm install
-COPY ./frontend/ ./
+COPY . .
 RUN npm run build
 
 # Stage 2: Serve the React app using Nginx
